// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #ColCell should get custom col cell style 1`] = `
Array [
  Object {
    "height": 60,
    "id": "root[&]笔",
    "width": 100,
  },
  Object {
    "height": 60,
    "id": "root[&]笔[&]price",
    "width": 50,
  },
  Object {
    "height": 60,
    "id": "root[&]笔[&]cost",
    "width": 50,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #ColCell should get custom col cell style by custom hook 1`] = `
Array [
  Object {
    "height": 40,
    "id": "root[&]笔",
    "width": 200,
  },
  Object {
    "height": 40,
    "id": "root[&]笔[&]price",
    "width": 100,
  },
  Object {
    "height": 40,
    "id": "root[&]笔[&]cost",
    "width": 100,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #ColCell should get custom col cell style by field 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]笔",
    "width": 300,
  },
  Object {
    "height": 30,
    "id": "root[&]笔[&]price",
    "width": 150,
  },
  Object {
    "height": 30,
    "id": "root[&]笔[&]cost",
    "width": 150,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #ColCell should get custom col cell style by field id 1`] = `
Array [
  Object {
    "height": 60,
    "id": "root[&]浙江",
    "width": 149,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江[&]义乌",
    "width": 149,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江[&]杭州",
    "width": 149,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #DataCell should get custom data cell style 1`] = `
Array [
  Object {
    "height": 90,
    "id": "root[&]浙江[&]义乌-root[&]笔[&]price",
    "width": 300,
  },
  Object {
    "height": 90,
    "id": "root[&]浙江[&]杭州-root[&]笔[&]price",
    "width": 300,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #RowCell should get custom row cell style 1`] = `
Array [
  Object {
    "height": 120,
    "id": "root[&]浙江",
    "width": 50,
  },
  Object {
    "height": 60,
    "id": "root[&]浙江[&]义乌",
    "width": 50,
  },
  Object {
    "height": 60,
    "id": "root[&]浙江[&]杭州",
    "width": 50,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #RowCell should get custom row cell style by custom hook 1`] = `
Array [
  Object {
    "height": 80,
    "id": "root[&]浙江",
    "width": 100,
  },
  Object {
    "height": 40,
    "id": "root[&]浙江[&]义乌",
    "width": 100,
  },
  Object {
    "height": 40,
    "id": "root[&]浙江[&]杭州",
    "width": 100,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #RowCell should get custom row cell style by field 1`] = `
Array [
  Object {
    "height": 66,
    "id": "root[&]浙江",
    "width": 149,
  },
  Object {
    "height": 33,
    "id": "root[&]浙江[&]义乌",
    "width": 66,
  },
  Object {
    "height": 33,
    "id": "root[&]浙江[&]杭州",
    "width": 66,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests #RowCell should get custom row cell style by field id 1`] = `
Array [
  Object {
    "height": 330,
    "id": "root[&]浙江",
    "width": 149,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江[&]义乌",
    "width": 149,
  },
  Object {
    "height": 300,
    "id": "root[&]浙江[&]杭州",
    "width": 149,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests should render default cell style 1`] = `
Array [
  Object {
    "height": 60,
    "id": "root[&]浙江",
    "width": 149,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江[&]义乌",
    "width": 149,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江[&]杭州",
    "width": 149,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests should render default cell style 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]笔",
    "width": 300,
  },
  Object {
    "height": 30,
    "id": "root[&]笔[&]price",
    "width": 150,
  },
  Object {
    "height": 30,
    "id": "root[&]笔[&]cost",
    "width": 150,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests PivotSheet Custom Cell Style Tests should render default cell style 3`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]浙江[&]义乌-root[&]笔[&]price",
    "width": 150,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江[&]杭州-root[&]笔[&]price",
    "width": 150,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江[&]义乌-root[&]笔[&]cost",
    "width": 150,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江[&]杭州-root[&]笔[&]cost",
    "width": 150,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should render default cell style 1`] = `Array []`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should render default cell style 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "root[&]子类别",
    "width": 299,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should render default cell style 3`] = `
Array [
  Object {
    "height": 30,
    "id": "0-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "1-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "2-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "3-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "4-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "5-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "6-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "7-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "8-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "9-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "10-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "11-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "12-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "0-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "1-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "2-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "3-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "4-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "5-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "6-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "7-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "8-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "9-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "10-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "11-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "12-root[&]子类别",
    "width": 299,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should set col cell style by field 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]类别",
    "width": 50,
  },
  Object {
    "height": 30,
    "id": "root[&]子类别",
    "width": 120,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should set col cell style by field for multiple columns 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]地区",
    "width": 180,
  },
  Object {
    "height": 30,
    "id": "root[&]地区[&]省份",
    "width": 100,
  },
  Object {
    "height": 30,
    "id": "root[&]地区[&]城市",
    "width": 80,
  },
  Object {
    "height": 60,
    "id": "root[&]类型",
    "width": 119,
  },
  Object {
    "height": 30,
    "id": "root[&]金额",
    "width": 210,
  },
  Object {
    "height": 30,
    "id": "root[&]金额[&]价格",
    "width": 90,
  },
  Object {
    "height": 30,
    "id": "root[&]金额[&]数量",
    "width": 120,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should set col cell style by field id 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]类别",
    "width": 100,
  },
  Object {
    "height": 30,
    "id": "root[&]子类别",
    "width": 200,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should set col cell style by width 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]类别",
    "width": 100,
  },
  Object {
    "height": 30,
    "id": "root[&]子类别",
    "width": 100,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should set row cell style by height 1`] = `
Array [
  Object {
    "height": 60,
    "id": "0-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "1-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "2-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "3-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "4-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "5-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "6-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "0-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "1-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "2-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "3-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "4-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "5-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 60,
    "id": "6-root[&]子类别",
    "width": 299,
  },
]
`;

exports[`SpreadSheet Custom Cell Style Tests TableSheet Custom Cell Style Tests should set row cell style by row index 1`] = `
Array [
  Object {
    "height": 40,
    "id": "0-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "1-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 100,
    "id": "2-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "3-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "4-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "5-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "6-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "7-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "8-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "9-root[&]类别",
    "width": 299,
  },
  Object {
    "height": 40,
    "id": "0-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "1-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 100,
    "id": "2-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "3-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "4-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "5-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "6-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "7-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "8-root[&]子类别",
    "width": 299,
  },
  Object {
    "height": 30,
    "id": "9-root[&]子类别",
    "width": 299,
  },
]
`;
